EPBDS Code style changes due to sonar messages.